refactor, implement custom watcher

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "monorepo-utils",
+	"name": "@calmdown/rollup-workspace-monorepo",
 	"private": true,
 	"packageManager": "yarn@4.12.0",
 	"workspaces": [
