--- a/packages/rolldown-workspace/package.json
+++ b/packages/rolldown-workspace/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"exports": {
 		".": {
-			"import": "./dist/index.mjs",
+			"import": "./dist/index.js",
 			"types": "./dist/index.d.ts"
 		}
 	},
@@ -22,6 +22,7 @@
 		"typescript": "5.9.3"
 	},
 	"scripts": {
-		"build": "rolldown --config rolldown.config.mjs"
+		"build": "rolldown --config rolldown.config.js",
+		"typecheck": "tsc --noEmit"
 	}
 }
