--- a/packages/rolldown-workspace/package.json
+++ b/packages/rolldown-workspace/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@calmdown/rolldown-workspace",
-	"version": "1.0.0-beta.1",
+	"version": "1.0.0-rc.1",
 	"license": "ISC",
 	"type": "module",
 	"exports": {
@@ -13,11 +13,11 @@
 		"dist"
 	],
 	"peerDependencies": {
-		"rolldown": "1.0.0-rc.3"
+		"rolldown": "1.0.0-rc.5"
 	},
 	"devDependencies": {
-		"@types/node": "25.0.3",
-		"rolldown": "1.0.0-rc.3",
+		"@types/node": "25.2.3",
+		"rolldown": "1.0.0-rc.5",
 		"rolldown-plugin-dts": "0.22.1",
 		"typescript": "5.9.3"
 	},
